--- a/portifolio/src/App.css
+++ b/portifolio/src/App.css
@@ -20,31 +20,7 @@ body {
 
 }
 
-#container-upmenu {
-    background-color: #1C1D1A;
-    width: 100vw;
-    height: 70px;
-}
 
-.upmnenu-buttons {
-    background-color: transparent;
-    color: #ffff;
-    border: 0;
-    padding: 70px;
-    font-size: 18px;
-}
-
-
-.upmnenu-buttons:hover {
-    text-decoration: #0D99FF underline 4px;
-}
-
-#container-upmenu-buttons {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    height: 100%;
-}
 
 #container-profile {
     width: 100vw;
@@ -55,7 +31,7 @@ body {
 }
 
 .img_foto {
-    width: 500px;
+    width: 45vw;
     border-radius: 40px;
 }
 
@@ -87,4 +63,19 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+#container-aboutme {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#container-aboutme-text {
+    color: #ffffff;
+    padding: 50px;
+    background-color: #a9a9a8;
+    border-radius: 24px;
+    margin: 2vh;
+    width: 50%;
 }
