--- a/portifolio/src/App.css
+++ b/portifolio/src/App.css
@@ -20,21 +20,10 @@ body {
 
 }
 
+.text1 {
+    font-size: 60px;
+    text-decoration: #0D99FF underline solid 4px;
+    letter-spacing: 10px;
+    padding: 70px 70px 0px 70px;
 
-
-
-
-#container-aboutme {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-#container-aboutme-text {
-    color: #ffffff;
-    padding: 50px;
-    background-color: #a9a9a8;
-    border-radius: 24px;
-    margin: 2vh;
-    width: 50%;
 }
