feat: add styles for skills

--- a/portifolio/src/components/Skills/Skills.module.css
+++ b/portifolio/src/components/Skills/Skills.module.css
@@ -1,6 +1,31 @@
 .card_skill {
     background: #ffffff;
     color: black;
-    padding: 20px;
+    /* padding: 20px; */
     border-radius: 20px;
+    padding: 20px;
+    justify-content: left;
+    display: flex;
+    margin: 13px;
+    flex-direction: row;
+    width: 20%;
+    align-items: center;
+    max-height: 20px;
+}
+
+#card_skills {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.icon_skill_img {
+
+    width: 25%;
+}
+
+.icon_skill {
+    display: flex;
+    justify-content: end;
 }
